--- a/UE_CPP/Config/DefaultInput.ini
+++ b/UE_CPP/Config/DefaultInput.ini
@@ -81,6 +81,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Roll",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="HorizontalLook",Scale=1.000000,Key=MouseX)
